# KokkosDslash

./: .gitmodules  CMakeLists.txt  README.md  TODO
include/: kokkos_constants.h  kokkos_defaults.h  kokkos_dslash.h  kokkos_dslash_config.h.cmake.in  kokkos_matvec.h  kokkos_ops.h  kokkos_qdp_utils.h  kokkos_qdp_vutils.h  kokkos_spinproj.h  kokkos_traits.h  kokkos_types.h  kokkos_vdslash.h  kokkos_vectype.h  kokkos_vmatvec.h  kokkos_vneighbor_table.h  kokkos_vnode.h  kokkos_vtypes.h  my_complex.h
include/lattice/: geometry_utils.h
lib/: CMakeLists.txt
lib/lattice/: lattice_info.cpp
lib/utils/: initialize.cpp  print_utils.cpp
test/: CMakeLists.txt  test_env.cpp  test_env.h  test_kokkos.cpp  test_kokkos_perf.cpp  test_kokkos_perf_md.cpp  test_kokkos_vectype.cpp  test_kokkos_vnode.cpp  test_kokkos_vperf.cpp
